--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "node-image-svr",
+  "name": "thinkjs-application",
+  "description": "application created by thinkjs",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node www/development.js",
+    "compile": "babel --presets es2015-loose,stage-1 --plugins transform-runtime src/ --out-dir app/ --source-maps",
+    "watch-compile": "node -e \"console.log('<npm run watch-compile> no longer need, use <npm start> command direct.');console.log();\"",
+    "watch": "npm run watch-compile",
+    "test": "istanbul cover ./node_modules/mocha/bin/_mocha -- -t 10000 --recursive  -R spec test/"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fuyuanwu/node-image-svr.git"
-  },
-  "author": "fuyuanwu",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fuyuanwu/node-image-svr/issues"
-  },
-  "homepage": "https://github.com/fuyuanwu/node-image-svr#readme",
   "dependencies": {
+    "thinkjs": "2.2.x",
+    "babel-runtime": "6.x.x",
+    "source-map-support": "0.4.0"
+  },
+  "devDependencies": {
+    "babel-cli": "6.x.x",
+    "babel-preset-es2015-loose": "6.x.x",
+    "babel-preset-stage-1": "6.x.x",
+    "babel-plugin-transform-runtime": "6.x.x",
+    "babel-core": "6.x.x",
+    "mocha": "1.20.1",
+    "istanbul": "0.4.0",
     "imagemagick-native": "^1.9.2"
-  }
+  },
+  "repository": "",
+  "license": "MIT"
 }
