--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thinkjs-application",
+  "name": "node-image-svr",
   "description": "application created by thinkjs",
   "version": "1.0.0",
   "scripts": {
@@ -21,8 +21,7 @@
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-core": "6.x.x",
     "mocha": "1.20.1",
-    "istanbul": "0.4.0",
-    "imagemagick-native": "^1.9.2"
+    "istanbul": "0.4.0"
   },
   "repository": "",
   "license": "MIT"
