--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-core": "6.x.x",
     "mocha": "1.20.1",
-    "istanbul": "0.4.0"
+    "istanbul": "0.4.0",
+    "imagemagick-native": "^1.9.2"
   },
   "repository": "",
   "license": "MIT"
