--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha -- -t 10000 --recursive  -R spec test/"
   },
   "dependencies": {
-    "thinkjs": "2.2.x",
     "babel-runtime": "6.x.x",
-    "source-map-support": "0.4.0"
+    "lodash": "^4.14.0",
+    "source-map-support": "0.4.0",
+    "thinkjs": "2.2.x"
   },
   "devDependencies": {
     "babel-cli": "6.x.x",
